--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,24 @@
 # AstrBot插件核心依赖
 astrbot>=4.5.0
 
-# 异步文件操作
-aiofiles>=23.0.0
+# 安全依赖 - HTML清理和模板渲染
+bleach>=6.0.0
+jinja2>=3.1.0
 
-# 图片生成
-playwright>=1.40.0
+# 异步文件操作
+aiofiles>=24.1.0
 
 # 数据验证和处理
-pydantic>=2.0.0
+pydantic>=2.8.0
 
-# 日期时间处理
-python-dateutil>=2.8.0
-
-# 路径处理
-pathlib2>=2.3.0; python_version<"3.4"
+# 图片生成
+playwright>=1.45.0
 
 # JSON处理增强
-orjson>=3.9.0
+orjson>=3.10.0
+
+# 日期时间处理
+python-dateutil>=2.9.0
 
 # 缓存支持
-cachetools>=5.0.0
-
-# HTML清理安全
-bleach>=6.0.0
+cachetools>=5.3.3
